# TinyVerseBot

./: .env-example  LICENSE  README.md  README_RU.md  main.py  pyproject.toml
bot/config/: app_config.py  config.py
bot/core/: registrator.py  safety_manager.py  tg_mini_app_auth.py  tinyversebot.py  utils.py
bot/core/services/: safety_manager.py
bot/utils/: accounts_manager.py  banner_animation.py  json_manager.py  launcher.py  logger.py  ua_generator.py
